{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "Player",
            "id": "20b09e54-1cf7-4414-b373-56515780368f",
            "actions": [
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "33ce1f4b-4e05-4385-9e40-91445fae2364",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "656b5ee2-dab1-408f-a861-41077fde0e30",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "c95a8530-bfb6-4338-b76a-20e5064fe7b0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dodge",
                    "type": "Button",
                    "id": "c8eb6190-06e9-4392-ac3d-f3a502a45ac1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4c36258a-f6b1-4ae0-927e-49cb863c6f3d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "LeftRight",
                    "id": "91f04e35-98c8-47a2-985e-609a97f5ed53",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "70a7070f-c835-4dd6-8dfe-58ee97f15781",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "52411daa-b77b-49e7-9b29-7d2e1b35a93e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "dd136cbe-4107-406d-a21e-c15975eebf0b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23ebb232-acbc-4da0-9b38-78d5e865fdf7",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}